<resources>
    <string name="app_name">Culture Homestay</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_more">More</string>
    <string name="title_favorite">Favorite</string>
    <!-- Facebook login clientID -->
    <string name="facebook_app_id">777011102660409</string>
    <string name="fb_login_protocol_scheme">fb777011102660409</string>
    <string name="login_with_fb">Login with Facebook</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_account">My Account</string>
    <string name="login">Login</string>
    <string name="language">Language</string>
    <string name="setting">Settings</string>
    <string name="lbl_signin_create">Sign in </string>
    <string name="lbl_signup_create">Sign up </string>
    <string name="lbl_account">Account</string>
    <string name="lbl_wishlist">Wishlist</string>
    <string name="lbl_booking">Booking</string>
    <string name="str_please_check_your_internet_connection">Please check your internet connection</string>
    <string name="logout">Logout</string>
    <string name="need_help">If you need any support related to the request of early check-in and late check-
out time. Please contact us at 18001990
for best support.</string>
    <string name="about_homestay">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="room_rates">Room rates</string>
    <string name="cancel_policy">Cancel Policy</string>
    <string name="photos">Photos</string>
    <string name="check_out_mess">Please select your check-out date</string>
    <string name="check_in_mess">Please select your check-in date</string>
    <string name="check_in">Check-in</string>
    <string name="check_out">Check-out</string>
    <string name="total_guests">Total guests</string>
    <string name="contact_details">Contact details</string>
    <string name="full_name">Full name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="total_invoice">Total Invoice</string>

    <!-- String of HomePage -->
    <string name="check_in_date">Check-in date</string>
    <string name="check_out_date">Check-out date</string>
    <string name="amount_of_people">Amount</string>
    <string name="button_search">Search</string>
    <string name="name_search">Name Of city or homestay</string>
    <string name="save">Save</string>

    <!--String of Booking-->
    <string name="lbl_myBooking">My Booking</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="unique_features">Unique features</string>
    <string name="cancel_flex">100% of total cost will be refunded if guests cancel 5 days prior to the check-in day.</string>
    <string name="cancel_mod">50% of total cost will be refunded if guests cancel 7 days prior to the check-in day.</string>
    <string name="flexible_type">Flexible</string>
    <string name="moderate_type">Moderate</string>
    <string name="normal_day">Monday - Thursday</string>
    <string name="day_of_week">Firday - Sunday</string>
    <string name="all_of_day">Monday - Sunday</string>
    <string name="location_or_homestay_name">Location or Homestay name</string>
    <string name="search">Search</string>
    <string name="most_culture_listing">Most Culture Listing</string>
    <string name="warning">Choosing this accommodation, You will have to wait for the host to confirm the room before payment.
    If you need to book now, please select the accommodation with the \"Instant\" icon.</string>
    <string name="instant_booking">Booking without waiting for the host to respond</string>
    <string name="purpose_of_trip">What’s the main purpose of this trip ?</string>
    <string name="type_anything_you_want_to_search">Type anything you want to search...</string>

    <string-array name="cities">
        <item>An Giang</item>
        <item>Bà Rịa - Vũng Tàu</item>
        <item>Bắc Giang</item>
        <item>Bắc Kạn</item>
        <item>Bạc Liêu</item>
        <item>Bắc Ninh</item>
        <item>Bến Tre</item>
        <item>Bình Dương</item>
        <item>Bình Phước</item>
        <item>Bình Thuận</item>
        <item>Bình Định</item>
        <item>Cà Mau</item>
        <item>Cần Thơ</item>
        <item>Cao Bằng</item>
        <item>Gia Lai</item>
        <item>Hà Giang</item>
        <item>Hà Nam</item>
        <item>Hà Nội</item>
        <item>Hà Tĩnh</item>
        <item>Hải Dương</item>
        <item>Hải Phòng</item>
        <item>Hậu Giang</item>
        <item>Hòa Bình</item>
        <item>Hưng Yên</item>
        <item>Khánh Hòa</item>
        <item>Kiên Giang</item>
        <item>Kon Tum</item>
        <item>Lai Châu</item>
        <item>Lâm Đồng</item>
        <item>Lạng Sơn</item>
        <item>Lào Cai</item>
        <item>Long An</item>
        <item>Nam Định</item>
        <item>Nghệ An</item>
        <item>Ninh Bình</item>
        <item>Ninh Thuận</item>
        <item>Phú Thọ</item>
        <item>Phú Yên</item>
        <item>Quảng Bình</item>
        <item>Quảng Nam</item>
        <item>Quảng Ngãi</item>
        <item>Quảng Ninh</item>
        <item>"Quảng Trị</item>
        <item>Sóc Trăng</item>
        <item>Sơn La</item>
        <item>Tây Ninh</item>
        <item>Thái Bình</item>
        <item>Thái Nguyên</item>
        <item>Thanh Hóa</item>
        <item>Thừa Thiên Huế</item>
        <item>Tiền Giang</item>
        <item>TP HCM</item>
        <item>Hồ Chí Minh</item>
        <item>Trà Vinh</item>
        <item>Tuyên Quang</item>
        <item>Vĩnh Long</item>
        <item>Vĩnh Phúc</item>
        <item>Yên Bái</item>
        <item>Đà Nẵng</item>
        <item>Đắk Lắk</item>
        <item>Điện Biên</item>
        <item>Đồng Nai</item>
        <item>Đồng Tháp</item>
    </string-array>
    <string-array name="districts">
        <item>Ba Vì</item>
        <item>Ba Đình</item>
        <item>Bắc Từ Liêm</item>
        <item>Cầu Giấy</item>
        <item>Chương Mỹ</item>
        <item>Gia Lâm</item>
        <item>Hà Đông</item>
        <item>Hai Bà Trưng</item>
        <item>Hoài Đức</item>
        <item>Hoàn Kiếm</item>
        <item>Hoàng Mai</item>
        <item>Long Biên</item>
        <item>Mê Linh</item>
        <item>Mỹ Đức</item>
        <item>Nam Từ Liêm</item>
        <item>Phú Xuyên</item>
        <item>Phúc Thọ</item>
        <item>Quốc Oai</item>
        <item>Sóc Sơn</item>
        <item>Sơn Tây</item>
        <item>Tây Hồ</item>
        <item>Thạch Thất</item>
        <item>Thanh Oai</item>
        <item>Thanh Trì</item>
        <item>Thanh Xuân</item>
        <item>Thường Tín</item>
        <item>Ứng Hòa</item>
        <item>Đan Phượng</item>
        <item>Đông Anh</item>
        <item>Đống Đa</item>

    </string-array>
</resources>
