<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_margin"
    android:orientation="vertical"
    tools:context=".activity.CancelPolicyActivity">
    <TextView
        android:id="@+id/tvClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/com_facebook_close"
        android:keepScreenOn="true"
        android:paddingVertical="@dimen/default_padding" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:text="Cancel Policy"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/large_text"
        android:textStyle="bold" />
    <LinearLayout
        android:id="@+id/layoutMod"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/moderate_type"
            android:textColor="@color/colorPrimaryButtonActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="20sp"
            android:text="@string/cancel_mod"
            android:id="@+id/tvCancelContent"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutFlex"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvCancelType"
            android:text="@string/flexible_type"
            android:textColor="@color/colorPrimaryButtonActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="20sp"
            android:text="@string/cancel_flex"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>