<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginHorizontal="@dimen/default_margin"
    android:weightSum="3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PickDateActivity" >
    <TextView
        android:id="@+id/tvBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_previous"
        android:keepScreenOn="true"
        android:paddingVertical="@dimen/default_padding" />
    <LinearLayout
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginBottom="@dimen/large_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:textColor="@color/colorPrimaryButtonActive"
            android:layout_gravity="center_vertical"
            android:id="@+id/tvCheckin"
            android:text="@string/check_in_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:id="@+id/tvCheckout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/check_out_date" />
    </LinearLayout>

    <com.squareup.timessquare.CalendarPickerView
        android:layout_weight="3"
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.squareup.timessquare.CalendarPickerView>

    <!--CardView BookNow-->
    <android.support.v7.widget.CardView
        android:layout_weight="0"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp">

        <TextView
            android:id="@+id/tvDaySelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/check_in_mess"
            android:textColor="@color/colorBlack" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="@dimen/default_padding"
            android:background="@color/colorPrimaryButtonInactive"
            android:enabled="false"
            android:text="Save"
            android:textColor="@color/colorWhite" />
    </android.support.v7.widget.CardView>
    <!--End CardView BookNow-->

</LinearLayout>