<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    android:layout_marginHorizontal="@dimen/default_margin"
    tools:context=".activity.BookingHomeConfirmActivity">

    <TextView
        android:id="@+id/tvBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_previous"
        android:keepScreenOn="true"
        android:paddingVertical="@dimen/default_padding" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:text="Customer Confirm"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/large_text"
        android:textStyle="bold" />

    <android.support.v4.widget.NestedScrollView
        android:layout_weight="3"
        android:id="@+id/nsc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:src="@drawable/homestay" />

            <!--HomeStay Name-->
            <TextView
                android:id="@+id/tvNameHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTypeHome"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_marginBottom="@dimen/default_padding"
                android:text="La Villa Angelina"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/large_text"
                android:textStyle="bold" />


            <!--ID homeStay-->
            <TextView
                android:id="@+id/tvCodeList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/calendar_selected_day_bg"
                android:paddingHorizontal="@dimen/default_margin"
                android:text="Your booking id is WANT123"
                android:textColor="@color/colorWhite" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_marginBottom="@dimen/default_padding"
                android:background="@color/colorGray" />
            <!--Check in and check out-->
            <LinearLayout
                android:baselineAligned="false"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/check_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/tvCheckinDate"
                        android:text="07/03/2019"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:paddingVertical="@dimen/default_margin"
                        android:text="@string/total_guests"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/cancel_policy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textAlignment="viewEnd"
                        android:text="@string/check_out"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:textAlignment="viewEnd"
                        android:id="@+id/tvCheckoutDate"
                        android:text="15/03/2019"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:textAlignment="viewEnd"
                        android:id="@+id/tvTotalGuest"
                        android:paddingVertical="@dimen/default_margin"
                        android:text="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Flexible"
                        android:textAlignment="viewEnd" />
                </LinearLayout>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_marginBottom="@dimen/default_padding"
                android:background="@color/colorGray" />
            <!--Contact details-->
            <TextView
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:text="@string/contact_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:baselineAligned="false"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/full_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:paddingVertical="@dimen/default_margin"
                        android:text="@string/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textAlignment="viewEnd"
                        android:id="@+id/tvUserName"
                        android:text="Chu Duc Viet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:textAlignment="viewEnd"
                        android:id="@+id/tvUserPhone"
                        android:paddingVertical="@dimen/default_margin"
                        android:text="0399213718"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:textAlignment="viewEnd"
                        android:id="@+id/tvUserMail"
                        android:text="vietcdse04473@fpt.edu.vn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_marginBottom="@dimen/default_padding"
                android:background="@color/colorGray" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:text="@string/total_invoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_weight="1"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:text="$1,230$"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <!--CardView BookNow-->
    <android.support.v7.widget.CardView
        android:layout_weight="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <!--<TextView-->
            <!--android:paddingLeft="@dimen/large_padding"-->
            <!--android:textSize="@dimen/large_text"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_vertical"-->
            <!--android:text="Payment with"-->
            <!--android:textColor="@color/colorBlack" />-->

        <ImageButton

            android:layout_marginVertical="5dp"
            android:id="@+id/btnPaypal"
            android:background="@drawable/paypal_button"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.CardView>
    <!--End CardView BookNow-->
</LinearLayout>